--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,6 +2,9 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= task.title %></li>
+    <li><%= task.title %>
+    <%= link_to 'Details', show_path(task) %> </li>
   <% end %>
 </ul>
+
+<%= link_to 'Add a new task', tasks_new_path %>
