--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,12 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= task.title %>
-    <%= link_to 'Details', show_path(task) %> </li>
+    <li><%= task.completed %>
+    <%= task.title %>
+    <%= link_to 'Details', task_path(task) %>
+    <%= link_to 'Edit', edit_path(task) %>
+    <%= link_to 'Delete', task_path(task),
+    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></li>
   <% end %>
 </ul>
 
